5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_2450.log
== SUBMITION (2019-04-11 19:29:27) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a>b):
	print(upper(a))
else:
	print(upper(b))
-- EXECUTION TIME:
0.190742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2450/main.py", line 6, in <module>
    print(upper(b))
NameError: name 'upper' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:29:28) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a>b):
	print(upper(a))
else:
	print(upper(b))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(upper(b))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:30:24) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a>b):
	print(a.upper())
else:
	print(b.upper())
-- OUTPUT:
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:10) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a>b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:32:15) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a>b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- EXECUTION TIME:
0.190717
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:32:24) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a<b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- EXECUTION TIME:
0.216817
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:25) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a<b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:30) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a<b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:32:36) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a<b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- EXECUTION TIME:
0.173116
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:32:39) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a<b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:33:55) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper()<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- ERROR:
File "XXXX", line 3
    if(a.upper()<(b.upper()):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:34:03) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:34:10) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.20551
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:34:51) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.187658
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:57:32) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.229904
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:57:49) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.153943
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:58:06) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.178703
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:58:08) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:58:10) 
-- CODE:
a=input("nome 1:   ")
b=input("nome 2:   ")
if(a.upper())<(b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)
-- EXECUTION TIME:
0.135198
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
